--- a/notebooks/model_finetune.ipynb
+++ b/notebooks/model_finetune.ipynb
@@ -2,6 +2,79 @@
   "cells": [
     {
       "cell_type": "code",
+      "source": [
+        "#!git clone https://github.com/AnupJindal07/gemma-3-finetune-resume-data.git"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "VLZWQhhy1c4G",
+        "outputId": "4526e717-d5a1-4454-d8dc-3c282bfa6c98",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "VLZWQhhy1c4G",
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'gemma-3-finetune-resume-data'...\n",
+            "remote: Enumerating objects: 86, done.\u001b[K\n",
+            "remote: Counting objects: 100% (86/86), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (54/54), done.\u001b[K\n",
+            "remote: Total 86 (delta 36), reused 70 (delta 24), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (86/86), 107.55 KiB | 1.43 MiB/s, done.\n",
+            "Resolving deltas: 100% (36/36), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install -q torch transformers sentence-transformers datasets peft accelerate bitsandbytes bs4"
+      ],
+      "metadata": {
+        "id": "Uf2MqUVB1cpm",
+        "outputId": "c5974e9a-297e-449c-ed02-deaca2fc3a1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "Uf2MqUVB1cpm",
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.1/59.1 MB\u001b[0m \u001b[31m14.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datetime import datetime\n",
+        "\n",
+        "from transformers import AutoModelForCausalLM, AutoTokenizer, Trainer, TrainingArguments, BitsAndBytesConfig, DataCollatorForLanguageModeling\n",
+        "from datasets import load_dataset\n",
+        "from peft import LoraConfig, get_peft_model, prepare_model_for_kbit_training\n",
+        "import torch"
+      ],
+      "metadata": {
+        "id": "zkN6wL7y1clQ"
+      },
+      "id": "zkN6wL7y1clQ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "id": "9c9be85e",
       "metadata": {
@@ -12,12 +85,7 @@
       },
       "outputs": [],
       "source": [
-        "from datetime import datetime\n",
         "\n",
-        "from transformers import AutoModelForCausalLM, AutoTokenizer, Trainer, TrainingArguments, BitsAndBytesConfig, DataCollatorForLanguageModeling\n",
-        "from datasets import load_dataset\n",
-        "from peft import LoraConfig, get_peft_model, prepare_model_for_kbit_training\n",
-        "import torch\n",
         "import constants\n",
         "\n",
         "print(\"CUDA available:\", torch.cuda.is_available())\n",
@@ -257,12 +325,13 @@
     },
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 5
