--- a/notebooks/model_finetune.ipynb
+++ b/notebooks/model_finetune.ipynb
@@ -553,9 +553,9 @@
       "source": [
         "config = LoraConfig(\n",
         "    task_type=\"CAUSAL_LM\",          # Causal language modeling\n",
-        "    r=16,                                   # Rank of adaptation\n",
-        "    lora_alpha=32,                         # LoRA scaling parameter\n",
-        "    lora_dropout=0.1,                      # LoRA dropout\n",
+        "    r=8,                                   # Rank of adaptation\n",
+        "    lora_alpha=16,                         # LoRA scaling parameter\n",
+        "    lora_dropout=0.05,                      # LoRA dropout\n",
         "    target_modules=[                       # Target modules for Gemma-3\n",
         "        \"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
         "        \"gate_proj\", \"up_proj\", \"down_proj\"\n",
@@ -784,8 +784,8 @@
       "cell_type": "code",
       "source": [
         "batch_size = 4\n",
-        "gradient_accumulation_steps = 16\n",
-        "num_epochs = 10"
+        "gradient_accumulation_steps = 8\n",
+        "num_epochs = 5"
       ],
       "metadata": {
         "id": "6lrZIh9q5Ck4"
@@ -821,16 +821,16 @@
         "    per_device_eval_batch_size=batch_size*2,\n",
         "    gradient_accumulation_steps=gradient_accumulation_steps,\n",
         "    num_train_epochs=num_epochs,\n",
-        "    learning_rate=2e-4,  # Higher learning rate for LoRA\n",
+        "    learning_rate=1e-4,  # Higher learning rate for LoRA, 2e-4\n",
         "    weight_decay=0.01,\n",
-        "    warmup_steps=20,\n",
-        "\n",
+        "    #warmup_steps=20,\n",
+        "    warmup_ratio=0.05,\n",
         "    logging_dir=\"logs\",\n",
-        "    logging_steps=20,\n",
+        "    logging_steps=25,\n",
         "\n",
-        "    eval_steps=20,\n",
+        "    eval_steps=50,\n",
         "    eval_strategy=\"steps\",\n",
-        "    save_steps=20,\n",
+        "    save_steps=50,\n",
         "    save_total_limit=4,\n",
         "    load_best_model_at_end=True,\n",
         "    max_grad_norm=1.0,   # Gradient clipping\n",
@@ -1216,11 +1216,11 @@
         "whoami()"
       ],
       "metadata": {
-        "id": "B1vQKK-lUBek",
-        "outputId": "80be0b76-b31a-47c0-ede5-2338704543e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "B1vQKK-lUBek",
+        "outputId": "80be0b76-b31a-47c0-ede5-2338704543e8"
       },
       "id": "B1vQKK-lUBek",
       "execution_count": 75,
