--- a/notebooks/model_finetune.ipynb
+++ b/notebooks/model_finetune.ipynb
@@ -1531,11 +1531,11 @@
         "print(f\"saving model at: {trained_model_path}\")"
       ],
       "metadata": {
-        "id": "Bj5nPo5snkFg",
-        "outputId": "63e14138-2711-4ba5-b451-fdbaf48731a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Bj5nPo5snkFg",
+        "outputId": "63e14138-2711-4ba5-b451-fdbaf48731a1"
       },
       "id": "Bj5nPo5snkFg",
       "execution_count": 25,
@@ -1645,14 +1645,66 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## Model inferencing"
+      ],
       "metadata": {
-        "id": "gyE4mVrJuez_"
+        "id": "sTH5w6fDzCuq"
+      },
+      "id": "sTH5w6fDzCuq"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Evaluating the model...\")\n",
+        "eval_results = trainer.evaluate()\n",
+        "print(f\"Evaluation results: {eval_results}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 93
+        },
+        "id": "gyE4mVrJuez_",
+        "outputId": "542a6bbf-f3a4-4dd8-afac-00a0755b4594"
       },
       "id": "gyE4mVrJuez_",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Evaluating the model...\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='57' max='57' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [57/57 01:24]\n",
+              "    </div>\n",
+              "    "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Evaluation results: {'eval_loss': 0.005531283561140299, 'eval_runtime': 85.8185, 'eval_samples_per_second': 5.244, 'eval_steps_per_second': 0.664, 'epoch': 3.1253918495297803}\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
